* Add stand alone Mark5C data recording program "record5c"
* checkdir: add detection of UKN scans (those rescued by the recording system after a crash)
* mk5dir: can now write a module directory to a module (Mark5B only and directory version 1 only)
* Add fileto5c program which copies a file from the OS filesystem to the Mark5 module

Version 1.4.1
~~~~~~~~~~~~
* Post DiFX-1.5.4/DiFX-2.0.0
* NOTE: Active version is now in DiFX-2.0 / trunk
* Respect DEFAULT_DMS_MASK
* Add Write-only option to testmod
* Fix parsing of mark5 directory files: stepping through extra parameters had a bug.
* No more 1024 scan limit on Mark5 modules
* Quiet version for vsn
* Version for DiFX-2.0.1

Version 1.4
~~~~~~~~~~~
* Post DiFX-1.5.3
* Check that input file exists before attempting correlation
* mk5dir: Mark4 directories from after 2009 Dec 31 would end up with wrong MJD
* Support for Streamstor SDK 9.0
* Support for difxVersion in difxStartMessage
* Don't launch a job near time(0)%10 = 5 to avoid getModules clash
* Add "recover" Mark5 utility
* Add mk5erase (similar to SSErase from Haystack) 
* Fix timerange mk5cp and add byterange copy
* Use mark5ipc to lock out access to /dev/windrvr6 
* Remove compatibility with Mark5A program
* Add very nascent mk5lock utility
* mk5dir: now by default will change the disk module state
* add mk5cat
* vsn: write protection setting and getting
* testmod: add timing
* Version for DiFX-2.0.0

Version 1.3
~~~~~~~~~~~
* set svn properties
* mk5dir, mk5cp: use XLRGetDirectory to work around streamstor bug
* mk5dir: add --force option
* mount and dismount commands (not using DBUS yet)
* make destination directory before copy
* Mark5 maint programs testmod and vsn added
* checkdir -- ultraverbose mode (-v -v -v -v) to print nicely formatted list of scans (thanks Adam)
* remove auto-starting of the Mark5A program
* Fix compiler warnings and move to safer string manipulation
* rename .c to .cpp to reflect the fact that g++ is needed